# dlltools

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml  release.yml
src/cli/: cli_parser.cpp  cli_parser.hpp  colours.hpp  commands.cpp  commands.hpp  main.cpp  output.cpp  output.hpp
src/core/: entropy.cpp  entropy.hpp  error.hpp  export.cpp  export.hpp  import.cpp  import.hpp  pe_parser.cpp  pe_parser.hpp  resource.cpp  resource.hpp  rich.cpp  rich.hpp  rva.cpp  rva.hpp  section.cpp  section.hpp  security.cpp  security.hpp
src/utils/: file_mapping.cpp  file_mapping.hpp  string_utils.cpp  string_utils.hpp
tests/: CMakeLists.txt  create_invalid_pe.ps1  create_test_pe.ps1  test_entropy.cpp  test_export.cpp  test_file_mapping.cpp  test_import.cpp  test_integration.cpp  test_pe_parser.cpp  test_resource.cpp  test_rich.cpp  test_rva.cpp  test_section.cpp
